--- a/global_reductions/path_breaker.tex
+++ b/global_reductions/path_breaker.tex
@@ -1,6 +1,6 @@
 \newcommand{\PB}{\mathsf{PB}}
 
-Given a derivation $\Phi$ and an atom $a$, the operator, $\PB$, defined in this section produces a derivation with the same premiss and conclusion as $\Phi$, which is weakly streamlined with respect to both $a$ and $\bar a$. This operator is a strict improvement over $\ISR$, since it does not require the input derivation to be in simple form, and it deals with the dual atoms in parallell. We will see later how a derivation containing $n$ atoms can be weakly streamlined by $n/2$ applications of $\PB$.
+Given a derivation $\Phi$ and an atom $a$, the operator, $\PB$, defined in this section produces a derivation with the same premiss and conclusion as $\Phi$, which is weakly streamlined with respect to both $a$ and $\bar a$. This operator is a strict improvement over $\ISR$, since it does not require the input derivation to be in simple form, and it deals with the dual atoms in parallel. We will see later how a derivation containing $n$ atoms can be weakly streamlined by $n/2$ applications of $\PB$.
 
 The operator is defined in terms of the following flow reduction.
 
@@ -160,7 +160,7 @@ We consider each case separately:
     \item for some $1\le i\le 3$, $\nu=f_i(\nu')$ and $\hat\nu=f_i(\hat\nu')$, or $\nu=g_i(\nu')$ and $\hat\nu=g_i(\hat\nu')$, then there is a path from $\nu'$ to $\hat\nu'$ in $\phi$, or
     \item $\nu=g_1(\nu')$ and $\hat\nu=g_2(\hat\nu')$, or $\nu=f_2(\nu')$ and $\hat\nu=f_3(\hat\nu')$ (resp., $\nu=g_2(\nu')$ and $\hat\nu=g_1(\hat\nu')$, or $\nu=f_3(\nu')$ and $\hat\nu=f_2(\hat\nu')$), then there is a path from $\nu'$ to $\nu'_\aiu$ (resp., $\nu'_\aid$) in $\phi$; and
   \end{enumerate}
-  \item in Definition~\ref{definition:PathBreaker} we have colored the edges that might occur in paths from $\nu_\aid$ in red and paths that might occur in path to $\nu_\aiu$ in green. Since the red and the green edges never coincide, there can be no paths from $\nu_\aid$ to $\nu_\aiu$.
+  \item in Definition~\ref{definition:PathBreaker} we have coloured the edges that might occur in paths from $\nu_\aid$ in red and paths that might occur in path to $\nu_\aiu$ in green. Since the red and the green edges never coincide, there can be no paths from $\nu_\aid$ to $\nu_\aiu$.
 \end{enumerate}
 \end{proof}
 %----------
