--- a/main_result.tex
+++ b/main_result.tex
@@ -41,7 +41,7 @@ Given a derivation (resp., proof)\/ $\Phi$, there exists a super-streamlined der
 \end{corollary}
 
 \begin{proof}
-By Theorem~\vref{theorem:WeakStreamlining}, Proposition~\vref{proposition:SuperStreamlining}, Theorem~\vref{theorem:ReductionRulesSound} and Proposition~\vref{proposition:SizeWeakeningReduction}.
+The result follows by Theorem~\vref{theorem:WeakStreamlining}, Proposition~\vref{proposition:SuperStreamlining}, Theorem~\vref{theorem:ReductionRulesSound} and Proposition~\vref{proposition:SizeWeakeningReduction}.
 \end{proof}
 %----------
 
@@ -51,6 +51,6 @@ Given a derivation\/ $\Phi$, there exists a hyper-streamlined derivation\/ $\Psi
 \end{corollary}
 
 \begin{proof}
-By Theorem~\vref{theorem:WeakStreamlining}, Proposition~\vref{proposition:SuperStreamlining}, Proposition~\vref{proposition:HyperStreamlining}, Theorem~\vref{theorem:ReductionRulesSound} and Proposition~\vref{proposition:SizeWeakeningReduction}.
+The result follows by Theorem~\vref{theorem:WeakStreamlining}, Proposition~\vref{proposition:SuperStreamlining}, Proposition~\vref{proposition:HyperStreamlining}, Theorem~\vref{theorem:ReductionRulesSound} and Proposition~\vref{proposition:SizeWeakeningReduction}.
 \end{proof}
 %----------
