--- a/global_reductions/isolated_subflow.tex
+++ b/global_reductions/isolated_subflow.tex
@@ -4,7 +4,7 @@ Given a derivation $\Phi$ in simple form with respect to an atom $a$, the operat
 
 \Tom{occurrences of}
 
-We will see later how a derivation containing occurrences of $n$ atoms can be weakly streamlined by two applications of $\Simpl$ and $n$ applications of $\ISR$. This is the most basic procedure for obtaining a weakly streamlined derivation, in particular it only deals with one atom at a time. In the following sections we will see how we can deal with several atoms in parallell.
+We will see later how a derivation containing occurrences of $n$ atoms can be weakly streamlined by two applications of $\Simpl$ and $n$ applications of $\ISR$. This is the most basic procedure for obtaining a weakly streamlined derivation, in particular it only deals with one atom at a time. In the following sections we will see how we can deal with several atoms in parallel.
 
 The operator is defined in terms of the following flow reduction.
 
@@ -13,7 +13,7 @@ The operator is defined in terms of the following flow reduction.
 %--------------------------------
 \newcommand{\fris}{{\mathsf{is}}}
 \begin{definition}\label{definition:IsolatedSubflowRemoval}
-We define the reduction $\to_\fris$ (where $\fris$ stands for \emph{isolated subflow}\index{Isolated Subflow Remover!reduction}) as follows, for any flow $\phi$ and any connected component $\psi$ that does not contain identity or cut vertices:
+We define the reduction $\to_\fris$ (where $\fris$ stands for \emph{isolated subflow}\index{Isolated Subflow Remover!reduction}) as follows, for any flow $\phi$ and any connected component $\psi$ that does not contain interaction or cut vertices:
 \[
 \vcenter{\hbox{\includegraphics{Figures/redISRRedex}}}
 \quad\to_\fris\quad
@@ -72,7 +72,7 @@ We obtain the two derivations $\Phi_\ttt$ and $\Phi_\fff$ from $\Phi'$ as follow
 }\quad.
 \]
 
-Since $\psi$ is connected and contains no identity or cut vertices, the mapping from all the occurrences $a^\psi$ to edges of $\psi$ is surjective. Hence, we know that both derivation $\Phi_\ttt$ and $\Phi_\fff$ have a flow isomorphic to $\phi$. We combine $\Phi_\ttt$ and $\Phi_\fff$ to get the desired derivation $\Psi$ with flow $\psi'$ and the same premiss and conclusion as $\Phi$:
+Since $\psi$ is connected and contains no interaction or cut vertices, the mapping from all the occurrences $a^\psi$ to edges of $\psi$ is surjective. Hence, we know that both derivation $\Phi_\ttt$ and $\Phi_\fff$ have a flow isomorphic to $\phi$. We combine $\Phi_\ttt$ and $\Phi_\fff$ to get the desired derivation $\Psi$ with flow $\psi'$ and the same premiss and conclusion as $\Phi$:
 \[
 \Psi\;=\;
 \vlderivation
