--- a/global_reductions/multiple_isolated_subflow.tex
+++ b/global_reductions/multiple_isolated_subflow.tex
@@ -1,14 +1,23 @@
 \newcommand{\MISR}{\mathsf{MISR}}
 
-With the operator $\ISR$ we can produce weakly streamilend derivations with respect to one atom at a time, with the operator $\PB$ we can produce weakly streamlined derivations with respect to two dual atoms in parallell. In this section we see an operator, $\MISR_n$, for every $n>0$, which is a generalisation of $\ISR$, that can produce a weakly streamlined derivation with respect to $n$ number of atoms in parallell, as long as they are pairwise non-dual.
+With the operator $\ISR$ we can produce weakly streamilend derivations with respect to one atom at a time, with the operator $\PB$ we can produce weakly streamlined derivations with respect to two dual atoms in parallel. In this section we see an operator, $\MISR_n$, for every $n>0$, which is a generalisation of $\ISR$, that can produce a weakly streamlined derivation with respect to $n$ number of atoms in parallel, as long as they are pairwise non-dual.
 
 We will see later how a derivation containing $2n$ atoms can be weakly streamlined by two applications of $\Simpl$ and two applications of $\MISR_n$.
 
+\Tom{`we here present' -> `we present here'.}
+
 \Tom{Added explanation:}
 
-The operator is defined in terms of the following flow reduction. Unlike the flow reductions of the preceding sections, we here present a reductions which depends on several parameters. It is important to note that these parameters are independent of the derivation to which we later apply the operator. In order to perform streamlining on an arbitrary number of atoms in parallel, we need find a class of atomic flows, $\eta_k$, which are used as a sort of sharing mechanism. We are at this stage not able to describe the flows $\eta_k$ without relying on their corresponding derivations. For this reason, it might help the understanding of Definition~\vref{definition:MultipleIsolatedSubflowsRemoval} to refer to the derivation given in the proof of Theorem~\vref{theorem:SoundMultipleIsolatedSubflowsRemoval}.
+The operator is defined in terms of the following flow reduction. Unlike the flow reductions of the preceding sections, we present here a reduction which depends on several parameters. It is important to note that these parameters are independent of the derivation to which we later apply the operator. In order to perform streamlining on an arbitrary number of atoms in parallel, we need find a class of atomic flows, $\eta_k$, which are used as a sort of sharing mechanism. We are at this stage not able to describe the flows $\eta_k$ without relying on their corresponding derivations. For this reason, it might help the understanding of Definition~\vref{definition:MultipleIsolatedSubflowsRemoval} to refer to the derivation given in the proof of Theorem~\vref{theorem:SoundMultipleIsolatedSubflowsRemoval}.
 
-In Subsection~\vref{subsection:ThresholdFormulae}, we present one possible combination of valid parameters, which yields quasipolynomial streamlining. We conjecture that by finding different parameters we will be able to obtain more efficient versions of this reduction. In particular, we hope to be able to obtain polynomial streamlining.
+\newcommand{\Ord}[1]{{\mathsf O}(#1)}
+\Tom{$\Ord{\cdot}$ is not defined, but it is very standard, so I leave it undefined.}
+
+\Tom{Pointed out definition of quasipolynomial.}
+
+\Tom{`yieilds' -> `yields'}
+
+In Subsection~\vref{subsection:ThresholdFormulae}, we present one possible combination of valid parameters, which yields quasipolynomial (\emph{i.e.} $n^{\Ord{\log n}}$) streamlining. We conjecture that by finding different parameters we will be able to obtain more efficient versions of this reduction. In particular, we hope to be able to obtain polynomial streamlining.
 
 \newcommand{\Gammasf}{\mathsf\Gamma}
 %----------------------------------
@@ -511,7 +520,7 @@ Given the atoms, formulae and derivations described in Definition~\vref{definiti
  \item true if at least $k$ of the atoms $a_1$, $\dots$, $a_{i-1}$, $a_{i+1}$, $\dots$, $a_n$ are true; and
  \item false if at least $N-k$ of the atoms $a_1$, $\dots$, $a_{i-1}$, $a_{i+1}$, $\dots$, $a_n$ are false.
 \end{itemize}
-It follows by contradiction that $N\ge n$. Furthermore, if $N=n$, we know that $\gamma_{k,i}$ is true if and only if at least $k$ of the atoms $a_1$, $\dots$, $a_{i-1}$, $a_{i+1}$, $\dots$, $a_n$ are true. This makes $\gamma_{k,i}$ a \emph{threshold formula}\index{threshold!formulae}, as we will se in the next section.
+It follows by contradiction that $N\ge n$. Furthermore, if $N=n$, we know that $\gamma_{k,i}$ is true if and only if at least $k$ of the atoms $a_1$, $\dots$, $a_{i-1}$, $a_{i+1}$, $\dots$, $a_n$ are true. This makes $\gamma_{k,i}$ a \emph{threshold formula}\index{threshold formula}, as we will see in the next section.
 \end{remark}
 %-----------
 
