No longer make index

--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 \documentclass[a4paper,11pt]{article}
 %TODO: remove
-\usepackage{makeidx}
+%\usepackage{makeidx}
 
 \usepackage{graphicx}
 \usepackage{fancyhdr}
