Added another comment explaning the 'surjectivity' of the mapping from derivations to flows

--- a/atomic_flows_and_derivations.tex
+++ b/atomic_flows_and_derivations.tex
@@ -244,7 +244,11 @@ Consider the rightmost derivation and its associated flow in Figure~\vref{figure
 
 \Tom{Gave the motivation for the following theorem.}
 
-We now show that the definition of atomic flows is `minimal', in the sense that, if we restrict the definition, Proposition~\vref{proposition:FlowUnique} is no longer true.
+We now show that the definition of atomic flows is `minimal', in the sense that, if we restrict the definition, Proposition~\vref{proposition:FlowUnique} is no longer true. We do this by showing that every flow is associatedi with some derivation.
+
+\Tom{Added more explanation:}
+
+It should be noted that the following result relies on the fact that both the formula structures of the premiss and conclusion, as well as all units occuring in the derivation, are ignored when extracting a flow. In particular, the derivation we construct in the following proof is `trivial', in the sense that it proves true from true. An example of this kind of construction can be seen in the first derivation of Figure~\vref{figure:ExampleAtomicFlows}.
 
 %-------------------------------------------------
 \begin{theorem}\label{theorem:SurjectiveDerToFlow}
