Updated the list of papers slightly

--- a/introduction.tex
+++ b/introduction.tex
@@ -72,10 +72,10 @@ However, atomic flows discard all information about logical relations and linear
 Some of the results in this thesis are, or will be, available in journal articles. One article has been published, one has been submitted and three are still being written. They are, respectively:
 \begin{itemize}
  \item atomic flows were introduced and the first normalisation results were shown in \emph{Normalisation Control in Deep Inference via Atomic Flows} with Alessio Guglielmi, published in \emph{Logical Methods in Computer Science};
- \item quasipolynomial cut elimination was shown using atomic flows in \emph{Quasipolynomial Normalisation in Deep Inference via Atomic Flows and Threshold Formulae}, with Paola Bruscoli, Alessio Guglielmi and Michel Parigot, submitted to \emph{Mathematical Structures in Computer Science};
- \item we are showing refined and generalised normalisation results in \emph{Normalisation Control in Deep Inference via Atomic Flows II}, with Alessio Guglielmi;
+ \item quasipolynomial cut elimination was shown using atomic flows in \emph{A Quasipolynomial Cut-Elimination Procedure in Deep Inference via Atomic Flows and Threshold Formulae}, with Paola Bruscoli, Alessio Guglielmi and Michel Parigot, submitted to \emph{Mathematical Structures in Computer Science};
+ \item we are showing refined and generalised normalisation results in \emph{Breaking Paths in Atomic Flows for Classical Logic}, with Alessio Guglielmi and Lutz Stra{\ss}burger;
  \item we are showing (among other things) that there is a polynomial relationship between the size of a derivation and the size of its associated atomic flow in \emph{On the Complexity of the Switch and Medial Rules}, with Paola Bruscoli, Alessio Guglielmi and Lutz Stra\ss{}burger; and
- \item we are defining two new deep-inference formalisms, for which atomic flows and the associated normalisation procedures are invariants in \emph{Formalism A and Formalism B}, with Alessio Guglielmi and Michel Parigot.
+ \item we are defining two new deep-inference formalisms, for which atomic flows and the associated normalisation procedures are invariants in \emph{A Proof Calculus that Reduces Syntactic Bureaucracy}, with Alessio Guglielmi and Michel Parigot.
 \end{itemize}
 
 Strictly speaking, our normalisation results could be expressed without the use of atomic flows. However, the principal advantage of atomic flows is that it allows us to use a graphical language to describe the gist of our ideas. Once the language is mastered, the most of the technical details of this thesis can easily be reconstructed based on the illustrations alone. Furthermore, atomic flows provide an intuition for working with normalisation, without which we would not have been able to discover our results.
